# std-simd-perf

./: .gitignore  CMakeLists.txt  README.md  merge_plots.py  run.sh
algorithms/: CMakeLists.txt  generate_plot.py  generate_plots.py  generate_plots.sh  main.hpp  plots.txt
algorithms/adjacent_difference/: CMakeLists.txt  main.cpp
algorithms/adjacent_find/: CMakeLists.txt  main.cpp
algorithms/all_any_none/: CMakeLists.txt  plots.txt
algorithms/all_any_none/all_of/: CMakeLists.txt  main.cpp
algorithms/all_any_none/any_of/: CMakeLists.txt  main.cpp
algorithms/all_any_none/none_of/: CMakeLists.txt  main.cpp
algorithms/all_of/: main.cpp
algorithms/copy/: CMakeLists.txt  main.cpp
algorithms/copy/copy/: main.cpp  (+1 more)
algorithms/copy_naive/: main.cpp
algorithms/count/: CMakeLists.txt  main.cpp
algorithms/count_naive/: main.cpp
algorithms/fill/: CMakeLists.txt  main.cpp
algorithms/fill/fill/: CMakeLists.txt  main.cpp
algorithms/fill/fill/plots/: double.csv  double_detail.csv  float.csv  float_detail.csv  int.csv  int_detail.csv
algorithms/find/: CMakeLists.txt
algorithms/for_each/: CMakeLists.txt  plots.txt
algorithms/foreach_complex/: main.cpp
algorithms/foreach_plain/: main.cpp
algorithms/generate/: CMakeLists.txt  plots.txt
algorithms/simple_arithmetic/: main.cpp
algorithms/transform/: CMakeLists.txt  main.cpp  plots.txt
kernels/: CMakeLists.txt
kernels/mandel/: CMakeLists.txt  main.cpp  par.cpp  par_simd.cpp  seq.cpp  simd.cpp
kernels/mandel_std/: CMakeLists.txt  main.cpp
roofline/: generate_plots.py  generate_plots.sh
roofline/bw/: generate_bw.py
roofline/foreach_complex/: main.cpp
roofline/foreach_simple/: main.cpp
simd_math_tests/: CMakeLists.txt  generate_plot.py  generate_plots.hpp  generate_plots.py  generate_plots.sh
simd_math_tests/cos/: CMakeLists.txt  main.cpp
simd_math_tests/division/: CMakeLists.txt  main.cpp
simd_math_tests/exp/: CMakeLists.txt  main.cpp
simd_math_tests/log/: CMakeLists.txt  main.cpp
simd_math_tests/pow/: CMakeLists.txt  main.cpp
simd_math_tests/sin/: CMakeLists.txt  main.cpp
simd_math_tests/sin_cos/: CMakeLists.txt  main.cpp
simd_math_tests/tan/: CMakeLists.txt  main.cpp
(+222 files in other folders)
